--- a/gcc-4_1-branch/gcc/cp/ChangeLog
+++ b/gcc-4_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,14 @@
+2006-11-13  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/29106
+	* init.c (constant_value_1): Treat a DECL_INITIAL of
+	error_mark_node as meaning that the variable is uninitialized,
+	rather than erroneously initialized.
+
+	PR c++/29518
+	* pt.c (coerce_template_parms): Do not skip_evaluation while
+	substituting template arguments.
+
 2006-10-22  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/20647
