--- a/gcc-4_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,159 @@
+2006-11-13  Francois-Xavier Coudert  <coudert@clipper.ens.fr>
+
+	PR libfortran/27895
+	* gcc/testsuite/gfortran.dg/zero_sized_1.f90: Uncomment checks
+	for RESHAPE.
+	* gfortran.dg/zero_sized_1.f90: New test.
+
+2006-11-13  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/29106
+	* g++.dg/init/self1.C: New test.
+	* g++.dg/other/fold1.C: Adjust error markers.
+	* g++.dg/init/member1.C: Likewise.
+
+2006-11-12  Jason Merrill  <jason@redhat.com>
+	    Andrew Pinski <pinskia@physics.uc.edu>
+
+	PR middle-end/28915
+	* gcc.target/i386/vectorize1.c: New.
+
+2006-11-13  Janis Johnson  <janis187@us.ibm.com>
+
+	Backport from mainline:
+	2006-08-14  Richard Guenther  <rguenther@suse.de>
+
+	PR testsuite/28703
+	* gcc.c-torture/execute/pr28651.c: Do not use argc
+	to avoid optimization, instead forbid inlining.
+
+2006-11-13  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/29518
+	* g++.dg/template/static28.C: New test.
+
+2006-11-13  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline:
+	2006-10-23  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/21032
+	* gcc.dg/pr21032.c: New testcase.
+
+2006-11-10 Paul Thomas <pault@gcc.gnu.org>
+
+	Backport from mainline.
+
+	PR fortran/29371
+	* gfortran.dg/nullify_3.f90: New test.
+
+	PR fortran/29392
+	* gfortran.dg/data_char_3.f90: New test.
+
+	PR fortran/29216
+	* gfortran.dg/result_default_init_1.f90: New test.
+
+	PR fortran/29314
+	* gfortran.dg/automatic_default_init_1.f90: New test.
+
+	PR fortran/29387
+	* trans-intrinsic.c (gfc_conv_intrinsic_len): Rearrange to have
+	a specific case for EXPR_VARIABLE and, in default, build an ss
+	to call gfc_conv_expr_descriptor for array expressions..
+
+	PR fortran/29490
+	* trans-expr.c (gfc_set_interface_mapping_bounds): In the case
+	that GFC_TYPE_ARRAY_LBOUND is not available, use descriptor
+	values for it and GFC_TYPE_ARRAY_UBOUND.
+
+	PR fortran/29641
+	* trans-types.c (gfc_get_derived_type): If the derived type
+	namespace has neither a parent nor a proc_name, set NULL for
+	the search namespace.
+
+	PR fortran/29565
+	* gfortran.dg/gfortran.dg/aliasing_dummy_3.f90: New test.
+
+2006-11-09  Janis Johnson  <janis187@us.ibm.com>
+
+	Backport from mainline.
+
+	2006-11-06  Janis Johnson  <janis187@us.ibm.com>
+		    Bernhard Fischer  <aldot@gcc.gnu.org>
+	* lib/gcc-dg.exp (output-exists): New proc.
+	(output-exists-not): New proc.
+	* gcc.test-framework/test-framework.awk: Support new directives.
+	* gcc.test-framework/dg-outexistsnot-exp-F.c: New test.
+	* gcc.test-framework/dg-outexistsnot-exp-P.c: New test.
+	* gcc.test-framework/dg-outexists-exp-F.c: New test.
+	* gcc.test-framework/dg-outexists-exp-XP.c: New test.
+	* gcc.test-framework/dg-outexistsnot-exp-XF.c: New test.
+	* gcc.test-framework/dg-outexists-exp-P.c: New test.
+
+	2006-10-31  Joseph Myers  <joseph@codesourcery.com>
+		    Richard Sandiford  <richard@codesourcery.com>
+	* lib/target-supports.exp (get_compiler_messages): Append options
+	as a single list element.
+
+	2006-10-30  Joseph Myers  <joseph@codesourcery.com>
+	* lib/target-supports.exp (check_function_available): Declare
+	function before calling.
+
+	2006-09-12  Kazu Hirata  <kazu@codesourcery.com>
+	* lib/c-torture.exp (c-torture-compile, c-torture-execute):
+	Treat $srcdir as a literal.
+	* lib/fortran-torture.exp (fortran-torture-compile,
+	fortran-torture-execute): Likewise.
+	* lib/objc-torture.exp (objc-torture-compile,
+	objc-torture-execute): Likewise.
+	* lib/profopt.exp (profopt-execute): Likewise.
+
+	2006-07-13  Janis Johnson  <janis187@us.ibm.com>
+	* lib/gcc-dg.exp (tool_load): Wrapper to support shouldfail tests.
+	(dg-test): Support shouldfail tests.
+	* lib/target-supports-dg.exp (dg-shouldfail): New.
+	* gcc.test-framework/test-framework.awk: Handle shouldfail tests.
+
+	2006-06-12  Matthew Sachs  <msachs@apple.com>
+	* lib/target-supports-dg.exp (check-flags): Include TOOL_OPTIONS in
+	the list of compiler flags; this causes those flags to be checked
+	for things like dg-skip-if.
+
+	2006-06-06  Janis Johnson  <janis187@us.ibm.com>
+	* lib/gcc-dg.exp (gcc-dg-test-1): Detect and report ICE.
+	* lib/gcc-defs.exp (tool_check_compile): Ditto.
+	* lib/fortran-torture.exp (fortran-torture-compile,
+	fortran-torture-execute): Ditto.
+
+	2006-05-11  Jason Merrill  <jason@redhat.com>
+	* lib/scanasm.exp (scan-not-hidden): Fix typo.
+
+	2006-02-08  Paolo Bonzini  <bonzini@gnu.org>
+	* lib/gcc-dg.exp (cleanup-rtl-dump, cleanup-tree-dump,
+	cleanup-ipa-dump): Update dump file glob patterns.
+	* lib/scanipa.exp (scan-ipa-dump, scan-ipa-dump-times,
+	scan-ipa-dump-not, scan-ipa-dump-dem): Likewise.
+	* lib/scanrtl.exp: New.
+	* lib/gcc-dg.exp: Load it.
+
+	2006-01-11  Ben Elliston  <bje@au1.ibm.com>
+	* lib/compat.exp (compat_skip_list): Make global, rename.
+	* lib/c-compat.exp: New file.
+	* gcc.dg/compat/struct-layout-1.exp: Use c-compat.exp.
+	* gcc.dg/compat/compat.exp: (compat-use-alt-compiler,
+	compat-use-tst-compiler): Move to new file.
+	Make some variables global, prepend "compat_" to their names.
+	* gcc.dg/compat/struct-layout-1.exp: Ditto.
+
+	2005-12-12  Alan Modra  <amodra@bigpond.net.au>
+	* gcc.misc-tests/linkage.exp: Set native_cflags for powerpc*-*-linux*.
+
+2006-11-08  Erik Edelmann  <eedelman@gcc.gnu.org>
+
+	PR fortran/29630
+	PR fortran/29679
+	* gfortran.dg/initialization_2.f90: Test PRs 29630 and 29679 too.
+
 2006-11-06  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/29373
