--- a/gcc-4_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-13  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/29759
+	* gfortran.dg/gomp/pr29759.f90: New test.
+
 2006-11-13  Francois-Xavier Coudert  <coudert@clipper.ens.fr>
 
 	PR libfortran/27895
