--- a/gcc-4_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-16  Jakub Jelinek  <jakub@redhat.com>
+
+	* lib/target-supports.exp (check_effective_target_fopenmp): Use
+	check_no_compiler_messages.
+
 2006-11-15  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/29581
