--- a/sourcerygxx-4_1/gcc/config/m68k/m68k.md
+++ b/sourcerygxx-4_1/gcc/config/m68k/m68k.md
@@ -6472,25 +6472,101 @@
   ""
   "nop")
 
-;; Used for frameless functions which save no regs and allocate no locals.
-(define_insn "return"
-  [(return)]
-  "m68k_use_return_insn ()"
+(define_expand "prologue"
+  [(const_int 0)]
+  ""
 {
-  if (current_function_pops_args == 0)
-    return "rts";
-  operands[0] = GEN_INT (current_function_pops_args);
-  return "rtd %0";
+  m68k_expand_prologue ();
+  DONE;
 })
 
-(define_insn "link"
+(define_expand "epilogue"
+  [(return)]
+  ""
+{
+  m68k_expand_epilogue ();
+  DONE;
+})
+
+;; Used for frameless functions which save no regs and allocate no locals.
+(define_expand "return"
+  [(return)]
+  "m68k_use_return_insn ()"
+  "")
+
+(define_insn "*return"
+  [(return)]
+  ""
+{
+  if (m68k_interrupt_function_p (current_function_decl))
+    return "rte";
+  else if (current_function_pops_args)
+    {
+      operands[0] = GEN_INT (current_function_pops_args);
+      return "rtd %0";
+    }
+  else
+    return "rts";
+})
+
+(define_insn "*m68k_store_multiple"
+  [(match_parallel 0 "" [(match_operand 1 "")])]
+  "m68k_movem_pattern_p (operands[0], NULL, 0, true)"
+{
+  return m68k_output_movem (operands, operands[0], 0, true);
+})
+
+(define_insn "*m68k_store_multiple_automod"
+  [(match_parallel 0 ""
+     [(set (match_operand:SI 1 "register_operand" "=a")
+	   (plus:SI (match_operand:SI 2 "register_operand" "1")
+		    (match_operand:SI 3 "const_int_operand")))])]
+  "m68k_movem_pattern_p (operands[0], operands[1], INTVAL (operands[3]), true)"
+{
+  return m68k_output_movem (operands, operands[0], INTVAL (operands[3]), true);
+})
+
+(define_insn "*m68k_load_multiple"
+  [(match_parallel 0 "" [(match_operand 1 "")])]
+  "m68k_movem_pattern_p (operands[0], NULL, 0, false)"
+{
+  return m68k_output_movem (operands, operands[0], 0, false);
+})
+
+(define_insn "*m68k_load_multiple_automod"
+  [(match_parallel 0 ""
+     [(set (match_operand:SI 1 "register_operand" "=a")
+	   (plus:SI (match_operand:SI 2 "register_operand" "1")
+		    (match_operand:SI 3 "const_int_operand")))])]
+  "m68k_movem_pattern_p (operands[0], operands[1],
+			 INTVAL (operands[3]), false)"
+{
+  return m68k_output_movem (operands, operands[0],
+			    INTVAL (operands[3]), false);
+})
+
+(define_expand "link"
+  [(parallel
+       [(set (match_operand:SI 0 "register_operand")
+	     (plus:SI (reg:SI SP_REG) (const_int -4)))
+	(set (match_dup 2)
+	     (match_dup 0))
+	(set (reg:SI SP_REG)
+	     (plus:SI (reg:SI SP_REG)
+		      (match_operand:SI 1 "const_int_operand")))])]
+  "m68k_arch_68020 || INTVAL (operands[1]) >= -0x8004"
+{
+  operands[2] = gen_frame_mem (SImode, plus_constant (stack_pointer_rtx, -4));
+})
+
+(define_insn "*link"
   [(set (match_operand:SI 0 "register_operand" "+r")
-        (plus:SI (reg:SI SP_REG) (const_int -4)))
+	(plus:SI (reg:SI SP_REG) (const_int -4)))
    (set (mem:SI (plus:SI (reg:SI SP_REG) (const_int -4)))
-        (match_dup 0))
+	(match_dup 0))
    (set (reg:SI SP_REG)
-        (plus:SI (reg:SI SP_REG)
-                 (match_operand:SI 1 "const_int_operand" "n")))]
+	(plus:SI (reg:SI SP_REG)
+		 (match_operand:SI 1 "const_int_operand")))]
   "m68k_arch_68020 || INTVAL (operands[1]) >= -0x8004"
 {
   operands[1] = GEN_INT (INTVAL (operands[1]) + 4);
@@ -6502,11 +6578,24 @@
     return "link.l %0,%1";
 })
 
-(define_insn "unlink"
-  [(set (reg:SI SP_REG)
-	(plus:SI (match_operand:SI 0 "register_operand" "=r") (const_int 4)))
-   (set (match_dup 0)
-	(mem:SI (match_dup 0)))]
+(define_expand "unlink"
+  [(parallel
+      [(set (match_operand:SI 0 "register_operand")
+	    (match_dup 1))
+       (set (reg:SI SP_REG)
+	    (plus:SI (match_dup 0)
+		     (const_int 4)))])]
+  ""
+{
+  operands[1] = gen_frame_mem (SImode, copy_rtx (operands[0]));
+})
+
+(define_insn "*unlink"
+  [(set (match_operand:SI 0 "register_operand" "+r")
+	(mem:SI (match_dup 0)))
+   (set (reg:SI SP_REG)
+	(plus:SI (match_dup 0)
+		 (const_int 4)))]
   ""
   "unlk %0")
 
