--- a/gcj-eclipse-merge-branch/libjava/ChangeLog
+++ b/gcj-eclipse-merge-branch/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2006-11-17  Andrew Haley  <aph@redhat.com>
+
+	* java/net/natVMURLConnection.cc: Check for HAVE_MAGIC_OPEN.
+	* configure.ac: Add HAVE_MAGIC_OPEN.
+	* include/config.h.in: Regenerated.
+	* configure: Regenerated.
+	
 2006-11-07  Andrew Haley  <aph@redhat.com>
 
 	* java/lang/VMCompiler.java (compileClass): Revert mistaken
