--- a/gcc-4_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,22 @@
+2006-11-19  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline:
+	2006-09-22  Zdenek Dvorak <dvorakz@suse.cz>
+
+	PR tree-optimization/28888
+	* gcc.dg/pr28888.c: New test.
+
+2006-11-17  Andrew Pinski  <andrew_pinski@playstation.sony.com>
+
+	PR tree-opt/29788
+	* gfortran.fortran-torture/compile/inline_1.f90:
+	New testcase.
+
+2006-11-17  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/29584
+	* gcc.dg/torture/pr29584.c: New test.
+
 2006-11-16  Jakub Jelinek  <jakub@redhat.com>
 
 	* lib/target-supports.exp (check_effective_target_fopenmp): Use
