2006-11-21  Andrew Haley  <aph@redhat.com>
        * java/lang/Class.h: (isEnum, isSynthetic, isAnnotation): Move
        to native code.
        * java/lang/Class.java (isEnum, isSynthetic, isAnnotation):
        Likewise.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj@119058 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcj-eclipse-merge-branch/libjava/ChangeLog
+++ b/gcj-eclipse-merge-branch/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2006-11-21  Andrew Haley  <aph@redhat.com>
+
+	* java/lang/Class.h: (isEnum, isSynthetic, isAnnotation): Move
+	to native code. 
+	* java/lang/Class.java (isEnum, isSynthetic, isAnnotation):
+	Likewise.
+
 2006-11-17  Andrew Haley  <aph@redhat.com>
 
 	* java/net/natVMURLConnection.cc: Check for HAVE_MAGIC_OPEN.
