2006-11-22  Andrew Haley  <aph@redhat.com>
        * jcf-reader.c (get_attribute): Mark attr_type unused.

        * builtins.c (compareAndSwapObject_builtin): Fix declaration.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj@119089 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcj-eclipse-merge-branch/gcc/java/ChangeLog
+++ b/gcj-eclipse-merge-branch/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2006-11-22  Andrew Haley  <aph@redhat.com>
+
+	* jcf-reader.c (get_attribute): Mark attr_type unused.
+
+	* builtins.c (compareAndSwapObject_builtin): Fix declaration.
+
 2006-11-06  Andrew Haley  <aph@redhat.com>
 
 	* java-tree.h (CONSTANT_LazyFlag): New.
