--- a/gcj-eclipse-merge-branch/libjava/ChangeLog
+++ b/gcj-eclipse-merge-branch/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-23  Gary Benson  <gbenson@redhat.com>
+
+	* java/security/Security.java: Merge with classpath.
+	* java/lang/Package.java: Likewise.
+
 2006-11-21  Andrew Haley  <aph@redhat.com>
 
 	* java/lang/Class.h: (isEnum, isSynthetic, isAnnotation): Move
