2006-11-23  Andrew Haley  <aph@redhat.com>
	* Makefile.am (nat_source_files): Add gnu/classpath/natVMStackWalker.cc.
	* sources.am: Rebuild.
	* gnu/classpath/natVMStackWalker.cc: New file.
	* gnu/classpath/VMStackWalker.java: New file.
	* headers.txt: prepend 
	_Jv_Thread_t* _Jv_ThreadGetData(java::lang::Thread* thread)
	* include/java-stack.h: Add VMStackWalker namespace.
	Add friend class gnu::classpath::VMStackWalker.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj@119122 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcj-eclipse-merge-branch/libjava/ChangeLog
+++ b/gcj-eclipse-merge-branch/libjava/ChangeLog
@@ -1,3 +1,14 @@
+2006-11-23  Andrew Haley  <aph@redhat.com>
+
+	* Makefile.am (nat_source_files): Add gnu/classpath/natVMStackWalker.cc.
+	* sources.am: Rebuild.
+	* gnu/classpath/natVMStackWalker.cc: New file.
+	* gnu/classpath/VMStackWalker.java: New file.
+	* headers.txt: prepend 
+	_Jv_Thread_t* _Jv_ThreadGetData(java::lang::Thread* thread)
+	* include/java-stack.h: Add VMStackWalker namespace.
+	Add friend class gnu::classpath::VMStackWalker.
+
 2006-11-23  Gary Benson  <gbenson@redhat.com>
 
 	* java/security/Security.java: Merge with classpath.
