--- a/gcj-eclipse-merge-branch/libjava/ChangeLog
+++ b/gcj-eclipse-merge-branch/libjava/ChangeLog
@@ -1,5 +1,10 @@
 2006-11-23  Andrew Haley  <aph@redhat.com>
 
+	* java/lang/natClassLoader.cc (_Jv_RegisterClasses): Abort if we
+	are ABI-incompatible.
+
+2006-11-23  Andrew Haley  <aph@redhat.com>
+
 	* Makefile.am (nat_source_files): Add gnu/classpath/natVMStackWalker.cc.
 	* sources.am: Rebuild.
 	* gnu/classpath/natVMStackWalker.cc: New file.
