2006-11-24  Paul Biggar  <paul.biggar@gmail.com>
	* decl.c (java_init_decl_processing): Initialized init_object_node,
	and init_newarray_node. Declared as malloc and changed signature of
	init_no_finalizer_node, init_anewarray_node, init_multianewarray_node.
	* java-tree.h (JTI_INIT_OBJECT_NODE, JTI_INIT_NEWARRAY_NODE)
	(JTI_INIT_ANEWARRAY_NODE, JTI_INIT_MULTIANEWARRAY_NODE): Declared
	(JTI_INIT_NEW_ARRAY_NODE): Removed.
	(init_object_node, init_newarray_node, init_anewarray_node)
	(init_multianewarray_node): Declared

2006-11-24	Paul Biggar	<paul.biggar@gmail.com>

	* ipa-stack-allocate.c (is_class_type): New function
	(insert_assignment_from_field, insert_assignment_to_field): Use vectors
	(replace_with_alloca, replace_object_with_alloca)
	(replace_array_with_alloca, replace_multi_array_with_alloca)
	(replace_prim_array_with_alloca): New.

	* ipa-stack-allocate.c (execute_instrument_stack_allocate):
	(gate_instrument_stack_allocate, pass_instrument_stack_allocate): New pass
	* common.opt (-fipa-stack-allocate): Take an int as a parameter
	* passes.c (init_optimization_passes): Add pass_instrument_stack_allocate

	* congraph.c (con_node_hashtable, con_node_id_hash,
	(init_con_node_hashtable, statement_type_hashtable)
	(statement_type_hash, htab_statement_type_eq)
	(init_statement_type_hashtable, find_node)): New
	(get_field_nodes): Use a vector instead
	(set_stmt_type): Rename to set_statement_type
	(get_stmt_type): Rename to get_statement_type
	(get_ps_and_ts, ps, ts, VEC_contains, clear_end_markers): New
	(get_points_to_and_terminals): Use vectors
	* congraph.h (con_node_vec): Declared con_node vector

2006-11-24  Paul Biggar  <paul.biggar@gmail.com>

	* gcj/javaprims.h (_Jv_InitObject, _Jv_InitObjectNoInitNoFinalizer):
	Declared
	(_Jv_InitObjectNoFinalizer): Changed signature.
	(_Jv_InitUtf8Const): Added friend declaration.

	* gcj/array.h (_Jv_InitPrimArray): New declaration.
	(_Jv_InitNewObjectArray): Changed signature.

	* boehm.cc (_Jv_AllocBytes, _Jv_AllocO

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,27 @@
+2006-11-24	Paul Biggar	<paul.biggar@gmail.com>
+
+	* ipa-stack-allocate.c (is_class_type): New function
+	(insert_assignment_from_field, insert_assignment_to_field): Use vectors
+	(replace_with_alloca, replace_object_with_alloca)
+	(replace_array_with_alloca, replace_multi_array_with_alloca)
+	(replace_prim_array_with_alloca): New.
+
+	* ipa-stack-allocate.c (execute_instrument_stack_allocate):
+	(gate_instrument_stack_allocate, pass_instrument_stack_allocate): New pass
+	* common.opt (-fipa-stack-allocate): Take an int as a parameter
+	* passes.c (init_optimization_passes): Add pass_instrument_stack_allocate
+
+	* congraph.c (con_node_hashtable, con_node_id_hash,
+	(init_con_node_hashtable, statement_type_hashtable)
+	(statement_type_hash, htab_statement_type_eq)
+	(init_statement_type_hashtable, find_node)): New
+	(get_field_nodes): Use a vector instead
+	(set_stmt_type): Rename to set_statement_type
+	(get_stmt_type): Rename to get_statement_type
+	(get_ps_and_ts, ps, ts, VEC_contains, clear_end_markers): New
+	(get_points_to_and_terminals): Use vectors
+	* congraph.h (con_node_vec): Declared con_node vector
+
 2006-10-19	Paul Biggar	<paul.biggar@gmail.com>
 
 	* ipa-stack-allocate.c (hashtab.h): Added header
@@ -19,10 +43,6 @@
 
 	* con_graph.h (last_link, merge_next_lists, init_markers)
 	(init_node_hashtable): New declarations
-
-
-
-
 
 2006-10-19	Paul Biggar	<paul.biggar@gmail.com>
 
