--- a/gcc-4_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,20 @@
+2006-11-24  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/29736
+	* gcc.dg/pr29736.c: New test.
+
+2006-11-24  Andreas Krebbel  <krebbel1@de.ibm.com>
+
+	* gcc.dg/20061124-1.c: New testcase.
+
+2006-11-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/29570
+	* g++.dg/template/static29.C: New test.
+
+	PR c++/29734
+	* g++.dg/conversion/simd4.C: New test.
+
 2006-11-19  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline:
