--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-04-29  Paolo Carlini  <pcarlini@suse.de>
+
+	* include/bits/localefwd.h: Remove redundant inline qualifiers.
+	(__check_facet): Move...
+	* include/bits/basic_ios.h: ... here.
+	(widen(char), narrow(char_type, char)): Define inline.
+	* include/bits/basic_ios.tcc (widen(char), narrow(char_type, char)):
+	Remove.
+
 2007-04-27  Paolo Carlini  <pcarlini@suse.de>
 
 	DR 438, [DR].
