* testsuite/lib/libstdc++.exp (v3_target_compile_as_c): Correct 	regexp to filter out -nostdinc++.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk/libstdc++-v3@124298 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-30  Hans-Peter Nilsson  <hp@axis.com>
+
+	* testsuite/lib/libstdc++.exp (v3_target_compile_as_c): Correct
+	regexp to filter out -nostdinc++.
+
 2007-04-30  Paolo Carlini  <pcarlini@suse.de>
 
 	PR libstdc++/30449 (equal)
