--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-01  Benjamin Kosnik  <bkoz@redhat.com>
+	
+	* tr1/4_metaprogramming/*/explicit_instantiations.cc: Change
+	"basic_ofstream" in comment to type_traits.
+
 2007-04-30  Benjamin Kosnik  <bkoz@redhat.com>
 
 	Directory layout flattening.
