--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2007-05-01  Benjamin Kosnik  <bkoz@redhat.com>
 	
-	* tr1/4_metaprogramming/*/explicit_instantiations.cc: Change
+	* testsuite/*/explicit_instantiations.cc: Change to...
+	* testsuite/*/explicit_instantiation.cc: ... this.
+
+2007-05-01  Benjamin Kosnik  <bkoz@redhat.com>
+	
+	* testsuite/tr1/4_metaprogramming/*/explicit_instantiations.cc: Change
 	"basic_ofstream" in comment to type_traits.
 
 2007-04-30  Benjamin Kosnik  <bkoz@redhat.com>
