* gcc.target/powerpc/ppc32-abi-dfp-1.c: Abort for failures, fix 	white space. 	* gcc.target/powerpc/ppc64-abi-dfp-1.c: Ditto. 	* gcc.dg/dfp/cast.c: Support debug mode. 	* gcc.dg/dfp/convert-int.c: Support debug mode, modify test values, 	add more checks. 	* gcc.dg/dfp/convert-int-max.c: Support debug mode. 	* gcc.dg/dfp/func-vararg-dfp.c: Return zero for success.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/ibm@124360 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_1-branch/gcc/testsuite/ChangeLog
@@ -1,5 +1,14 @@
 2007-05-02  Janis Johnson  <janis187@us.ibm.com>
 
+	* gcc.target/powerpc/ppc32-abi-dfp-1.c: Abort for failure, fix
+	white space.
+	* gcc.target/powerpc/ppc64-abi-dfp-1.c: Ditto.
+	* gcc.dg/dfp/cast.c: Support debug mode.
+	* gcc.dg/dfp/convert-int.c: Support debug mode, modify test values,
+	add more checks.
+	* gcc.dg/dfp/convert-int-max.c: Support debug mode.
+	* gcc.dg/dfp/func-vararg-dfp.c: Return zero for success.
+
 	* gcc.dg/dfp/decfloat-constants.c: Check that the value of
 	DEC_EVAL_METHOD is in the valid range.
 
